crates/toml_edit/tests/snapshots/invalid/table/redefine-02.stderr
TOML parse error at line 4, column 5
  |
4 | [t1.t2]
  |     ^^
duplicate key
